crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__if_expressions.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true then { print("Hello Universe!"); } else { print("Hello World!"); }
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Ident("true"),
                3..7,
            ),
            then_branch: Spanned(
                Block(
                    [
                        Spanned(
                            Expr(
                                Spanned(
                                    Call(
                                        Spanned(
                                            Ident("print"),
                                            15..20,
                                        ),
                                        [
                                            Spanned(
                                                String("Hello Universe!"),
                                                21..38,
                                            ),
                                        ],
                                    ),
                                    15..39,
                                ),
                            ),
                            15..40,
                        ),
                    ],
                ),
                13..42,
            ),
            else_branch: Some(
                Spanned(
                    Block(
                        [
                            Spanned(
                                Expr(
                                    Spanned(
                                        Call(
                                            Spanned(
                                                Ident("print"),
                                                50..55,
                                            ),
                                            [
                                                Spanned(
                                                    String("Hello World!"),
                                                    56..70,
                                                ),
                                            ],
                                        ),
                                        50..71,
                                    ),
                                ),
                                50..72,
                            ),
                        ],
                    ),
                    48..74,
                ),
            ),
        },
        0..74,
    ),
)

--- Errors ---
[]
---
