crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__literal_expressions-2.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
823_472_340_983_273_327
---

Some(
    Spanned(
        Int(823472340983273327),
        0..23,
    ),
)

--- Errors ---
[]
---
